fix: id:52023 accordian body overlapping with header

--- a/src/components/SideNavigation/SideNavigation.scss
+++ b/src/components/SideNavigation/SideNavigation.scss
@@ -159,6 +159,8 @@ body .childLi {
     .body {
         padding:0px 0px;
         overflow: visible;
+        z-index: auto;
+        position: relative;
         &>div {
             margin: .6rem 2.1rem;
             div {
@@ -167,4 +169,9 @@ body .childLi {
             }
         }
     }
+
+    .bodyCollapsed {
+        z-index: -10;
+        position: relative;
+      }
 }
